# djangochat

./: .pre-commit-config.yaml  Dockerfile  LICENCE  README.md  pyproject.toml
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/chat/: models.py  serializers.py  urls.py  views.py
backend/chat/migrations/: 0003_rename_value_message_body.py
backend/djangochat/: settings.py
chat/: admin.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_rename_romm_room.py
djangochat/: settings.py  urls.py
frontend/chat/: admin.py
frontend/chat/migrations/: 0002_rename_romm_room.py
infra/: README.md
